# OpenclBackend

./: .cproject  .project  CMakeLists.txt
app/: OpenCLBackend.cpp
include/Avocado/: opencl_backend.h
include/OpenCLBackend/: opencl_backend.h
include/avocado/: opencl_backend.h
src/: tmp.cpp
